--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "flow-bin": "^0.50.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
-    "react-fontawesome": "^1.6.1"
+    "react-fontawesome": "^1.6.1",
+    "react-redux": "^5.0.5",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel-eslint": "^7.2.3",
@@ -16,9 +19,8 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.10.3",
-    "react-scripts": "0.9.5",
-    "react-router-dom": "^4.1.1"
-
+    "react-router-dom": "^4.1.1",
+    "react-scripts": "0.9.5"
   },
   "scripts": {
     "flow": "flow",
