--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,12 @@
 {
   "parser": "babel-eslint",
-  "extends": "airbnb",
+  "extends": [
+    "airbnb",
+    "plugin:flowtype/recommended"
+  ],
+  "plugins": [
+     "flowtype"
+  ],
   "globals": {
     "atom": true
   },
