--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-dom": "^15.5.4",
     "react-fontawesome": "^1.6.1",
     "react-redux": "^5.0.5",
+    "react-router-dom": "^4.1.1",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0"
   },
@@ -21,11 +22,12 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.10.3",
-    "react-router-dom": "^4.1.1",
+    "flow-watch": "^1.1.1",
     "react-scripts": "0.9.5"
   },
   "scripts": {
     "flow": "flow",
+    "flow:watch": "flow-watch",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom && flow"
