--- a/.eslintrc
+++ b/.eslintrc
@@ -1,11 +1,10 @@
 {
   "parser": "babel-eslint",
   "extends": [
-    "airbnb",
-    "plugin:flowtype/recommended"
+    "airbnb"
   ],
   "plugins": [
-     "flowtype"
+    "react"
   ],
   "globals": {
     "atom": true
@@ -25,6 +24,7 @@
     "global-require": "off",
     "no-use-before-define": 0,
     "no-underscore-dangle": 0,
+    "react/forbid-prop-types": 0,
     "react/sort-prop-types": 2,
     "react/jsx-no-bind": 2,
     "react/require-default-props": 0,
