Fix .babelrc server and add logic and little css for form article

--- a/.eslintrc
+++ b/.eslintrc
@@ -30,6 +30,7 @@
     "react/require-default-props": 0,
     "react/no-find-dom-node": 0,
     "react/jsx-filename-extension": 0,
+    "react/no-array-index-key": 0,
     "space-before-function-paren": [
       2,
       "never"
