Add articles actions tests

--- a/.eslintrc
+++ b/.eslintrc
@@ -22,6 +22,7 @@
     ],
     "func-names": "off",
     "global-require": "off",
+    "arrow-body-style": "off",
     "no-use-before-define": 0,
     "no-underscore-dangle": 0,
     "react/forbid-prop-types": 0,
