--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node --require 'babel-register' server.js"
+    "start": "node --require 'babel-register' server.js",
+    "dev": "nodemon --require 'babel-register' server.js"
   },
   "author": "",
   "license": "ISC",
@@ -22,9 +23,11 @@
   },
   "devDependencies": {
     "babel-eslint": "^7.1.1",
+    "dotenv": "^4.0.0",
     "eslint": "^3.12.2",
     "eslint-config-airbnb": "^13.0.0",
     "eslint-plugin-import": "^2.2.0",
-    "faker": "^3.1.0"
+    "faker": "^3.1.0",
+    "nodemon": "^1.12.0"
   }
 }
